--- a/EDA/EDA_peter.ipynb
+++ b/EDA/EDA_peter.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# eval_root = '../../input/data/eval/sample_submission.csv'\n",
     "\n",
-    "data_path = '../../input/data/train'\n",
+    "data_path = '~/input/data/train'\n",
     "train_df = pd.read_csv(os.path.join(data_path, 'train_ratings.csv')) # 전체 학습 데이터"
    ]
   },
@@ -1279,8 +1279,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([2571, 2959, 296, 318, 356, 4993, 7153, 5952, 593, 2858], dtype='int64', name='item')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_df = train_df[train_df['item'] == popular_movie_ids[0]]\n",
+    "converted_df = old_df\n",
+    "\n",
+    "for old_time in old_df['time']:\n",
+    "    new_time = time.strftime('%Y-%m', time.localtime(old_time))\n",
+    "    converted_df['time'] = old_df['time'].replace([old_time], new_time) # replace the time column\n",
+    "\n",
+    "converted_df['time'].value_counts().plot(kind = 'bar', figsize = (8,20))\n",
+    "plt.xlabel('year-month')\n",
+    "plt.ylabel('# of movies')\n",
+    "plt.title('Statistics of user activity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
