[add] - [BERT4Rec]

--- a/EDA/EDA_peter.ipynb
+++ b/EDA/EDA_peter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# eval_root = '../../input/data/eval/sample_submission.csv'\n",
     "\n",
-    "data_path = '~/input/data/train'\n",
+    "data_path = '/opt/ml/input/data/train'\n",
     "train_df = pd.read_csv(os.path.join(data_path, 'train_ratings.csv')) # 전체 학습 데이터"
    ]
   },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -132,27 +132,342 @@
        "      <td>2140</td>\n",
        "      <td>1230782563</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2722</td>\n",
+       "      <td>1230782583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2313</td>\n",
+       "      <td>1230782646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2688</td>\n",
+       "      <td>1230782656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2428</td>\n",
+       "      <td>1230782694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>3113</td>\n",
+       "      <td>1230782719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1591</td>\n",
+       "      <td>1230782724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>1230782748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>11</td>\n",
+       "      <td>8169</td>\n",
+       "      <td>1230783004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2572</td>\n",
+       "      <td>1230783041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>11</td>\n",
+       "      <td>58293</td>\n",
+       "      <td>1230783046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>11</td>\n",
+       "      <td>7541</td>\n",
+       "      <td>1230783053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1367</td>\n",
+       "      <td>1230783065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>11</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1230783095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>11</td>\n",
+       "      <td>4792</td>\n",
+       "      <td>1230783100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>11</td>\n",
+       "      <td>7444</td>\n",
+       "      <td>1230783123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>11</td>\n",
+       "      <td>53953</td>\n",
+       "      <td>1230783161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>11</td>\n",
+       "      <td>56949</td>\n",
+       "      <td>1230783384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>11</td>\n",
+       "      <td>6502</td>\n",
+       "      <td>1230783392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>11</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>1230783397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>11</td>\n",
+       "      <td>51662</td>\n",
+       "      <td>1230783438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>11</td>\n",
+       "      <td>5151</td>\n",
+       "      <td>1230783478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>11</td>\n",
+       "      <td>35836</td>\n",
+       "      <td>1230783482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>11</td>\n",
+       "      <td>7293</td>\n",
+       "      <td>1230783500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>11</td>\n",
+       "      <td>33585</td>\n",
+       "      <td>1230783564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>11</td>\n",
+       "      <td>8810</td>\n",
+       "      <td>1230783579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>11</td>\n",
+       "      <td>56801</td>\n",
+       "      <td>1230783616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>11</td>\n",
+       "      <td>5377</td>\n",
+       "      <td>1230783644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>11</td>\n",
+       "      <td>344</td>\n",
+       "      <td>1230783700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>11</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1230783704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>11</td>\n",
+       "      <td>410</td>\n",
+       "      <td>1230783786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2124</td>\n",
+       "      <td>1230783788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>11</td>\n",
+       "      <td>828</td>\n",
+       "      <td>1230784021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>1230784185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>11</td>\n",
+       "      <td>8977</td>\n",
+       "      <td>1230784216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1032</td>\n",
+       "      <td>1230784254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1214</td>\n",
+       "      <td>1230784258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1230784277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1320</td>\n",
+       "      <td>1230784317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>11</td>\n",
+       "      <td>3897</td>\n",
+       "      <td>1230784412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>11</td>\n",
+       "      <td>7173</td>\n",
+       "      <td>1230784442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1225</td>\n",
+       "      <td>1230784460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2858</td>\n",
+       "      <td>1230784640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>11</td>\n",
+       "      <td>59418</td>\n",
+       "      <td>1230784666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>11</td>\n",
+       "      <td>45361</td>\n",
+       "      <td>1230784705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2706</td>\n",
+       "      <td>1230784732</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   user  item        time\n",
-       "0    11  4643  1230782529\n",
-       "1    11   170  1230782534\n",
-       "2    11   531  1230782539\n",
-       "3    11   616  1230782542\n",
-       "4    11  2140  1230782563"
+       "    user   item        time\n",
+       "0     11   4643  1230782529\n",
+       "1     11    170  1230782534\n",
+       "2     11    531  1230782539\n",
+       "3     11    616  1230782542\n",
+       "4     11   2140  1230782563\n",
+       "5     11   2722  1230782583\n",
+       "6     11   2313  1230782646\n",
+       "7     11   2688  1230782656\n",
+       "8     11   2428  1230782694\n",
+       "9     11   3113  1230782719\n",
+       "10    11   1591  1230782724\n",
+       "11    11   2600  1230782748\n",
+       "12    11   8169  1230783004\n",
+       "13    11   2572  1230783041\n",
+       "14    11  58293  1230783046\n",
+       "15    11   7541  1230783053\n",
+       "16    11   1367  1230783065\n",
+       "17    11     32  1230783095\n",
+       "18    11   4792  1230783100\n",
+       "19    11   7444  1230783123\n",
+       "20    11  53953  1230783161\n",
+       "21    11  56949  1230783384\n",
+       "22    11   6502  1230783392\n",
+       "23    11  53000  1230783397\n",
+       "24    11  51662  1230783438\n",
+       "25    11   5151  1230783478\n",
+       "26    11  35836  1230783482\n",
+       "27    11   7293  1230783500\n",
+       "28    11  33585  1230783564\n",
+       "29    11   8810  1230783579\n",
+       "30    11  56801  1230783616\n",
+       "31    11   5377  1230783644\n",
+       "32    11    344  1230783700\n",
+       "33    11     19  1230783704\n",
+       "34    11    410  1230783786\n",
+       "35    11   2124  1230783788\n",
+       "36    11    828  1230784021\n",
+       "37    11   1274  1230784185\n",
+       "38    11   8977  1230784216\n",
+       "39    11   1032  1230784254\n",
+       "40    11   1214  1230784258\n",
+       "41    11   1200  1230784277\n",
+       "42    11   1320  1230784317\n",
+       "43    11   3897  1230784412\n",
+       "44    11   7173  1230784442\n",
+       "45    11   1225  1230784460\n",
+       "46    11   2858  1230784640\n",
+       "47    11  59418  1230784666\n",
+       "48    11  45361  1230784705\n",
+       "49    11   2706  1230784732"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_df.info()\n",
-    "train_df.head(5)"
+    "train_df.head(50)"
    ]
   },
   {
@@ -166,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +590,7 @@
        "4   8609  1923"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +630,7 @@
        "Name: year, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +721,7 @@
        "1  5147  nm0000005"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +827,7 @@
        "4   356               Forrest Gump (1994)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,6 +835,114 @@
    "source": [
     "title_data.info()\n",
     "title_data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Funny Games (1997)'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>6807</td>\n",
+       "      <td>Monty Python's The Meaning of Life (1983)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>423</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Godfather: Part III, The (1990)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>509</td>\n",
+       "      <td>Piano, The (1993)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2033</th>\n",
+       "      <td>5932</td>\n",
+       "      <td>Burden of Dreams (1982)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3114</th>\n",
+       "      <td>2337</td>\n",
+       "      <td>Velvet Goldmine (1998)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668</th>\n",
+       "      <td>3273</td>\n",
+       "      <td>Scream 3 (2000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4517</th>\n",
+       "      <td>3623</td>\n",
+       "      <td>Mission: Impossible II (2000)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      item                                      title\n",
+       "213   6807  Monty Python's The Meaning of Life (1983)\n",
+       "423   2023            Godfather: Part III, The (1990)\n",
+       "529    509                          Piano, The (1993)\n",
+       "2033  5932                    Burden of Dreams (1982)\n",
+       "3114  2337                     Velvet Goldmine (1998)\n",
+       "3668  3273                            Scream 3 (2000)\n",
+       "4517  3623              Mission: Impossible II (2000)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title_data[title_data.item.isin([6807, 3623, 3273, 2023, 2337, 1878, 5932, 509, 4943, 5118])]"
    ]
   },
   {
@@ -1321,9 +1744,9 @@
    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
   },
   "kernelspec": {
-   "display_name": "주피터conda",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
